2006-08-08  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
    * olive/frontend/gtk/__init__.py: implemented OlivePreferences - this class
      is responsible for loading/saving user preferences
    * olive/frontend/gtk/handler.py: save preferences before quit
    * olive.glade: some wordings fixed (thanks to David Allouche)

2006-08-07  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive.galde: added custom artwork (icons)
    * icons/*: new icons for the toolbar
    * setup.py: install the icons

2006-08-05  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/diff.py: Diff window now destroyed if not a branch
    * olive.glade: added shadow to Diff window's scrollbars

2006-08-03  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/status.py: Status window implemented
    * olive.glade: Status window designed and Branch/status menu added
    * olive.glade: added Statistics menu
    * olive/frontend/gtk/__init__.py: added Statistics menu handlers
    * olive/frontend/gtk/handler.py: implemented Diff menu handler
    * olive/frontend/gtk/push.py: display known push location if available
    * olive/backend/info.py: implemented get_push_location()
    * olive/frontend/gtk/commit.py: change TextView font to Monospace
    * olive/frontend/gtk/diff.py: implemented diff window
    * olive.glade: added icons to windows and the about box, and the skeleton
      of the diff window was designed

2006-08-02  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * cmenu.ui: context menu UIManager description added
    * setup.py: install cmenu.ui to the appropriate place
    * olive/frontend/gtk/menu.py: implement the context menus
    * olive/frontend/gtk/__init__.py: added button_press_event for file list
    * olive/frontend/gtk/handler.py: handling that event (show popup menu)

2006-08-01  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
