@@ -10,3 +10,4 @@ TODO list for Olive
  - Display the commit file selector as a tree (so whole directories can be
    toggled) (j-a-meinel)
  - "Probe location" button on the Push dialog (test write access, etc.) (ddaa)
+ - Save and restore main window position and size (phanatic)
