@@ -7,5 +7,10 @@
         <separator />
         <menuitem name="diff" action="diff" />
         <menuitem name="log" action="log" />
+        <separator />
+        <menuitem name="bookmark" action="bookmark" />
+    </popup>
+    <popup name="context_left">
+        <menuitem name="remove_bookmark" action="remove_bookmark" />
     </popup>
 </ui>
