@@ -514,6 +514,8 @@
 		  <property name="fixed_height_mode">False</property>
 		  <property name="hover_selection">False</property>
 		  <property name="hover_expand">False</property>
+		  <signal name="row_activated" handler="on_treeview_left_row_activated" last_modification_time="Tue, 08 Aug 2006 15:31:09 GMT"/>
+		  <signal name="button_press_event" handler="on_treeview_left_button_press_event" last_modification_time="Tue, 08 Aug 2006 15:31:15 GMT"/>
 		</widget>
 	      </child>
 	    </widget>
